<resources>
    <string name="app_name" translatable="false">PromoHub</string>
    <string name="home_show_all_deals">Show all deals</string>
    <string name="home_customize_search">Customize search</string>
    <string name="image_home_content_description" translatable="false">image_home</string>
    <string name="let_s_find_your_next_game">Let\'s find your next game</string>
    <string name="show_deals_with_saved_filters">Show deals with saved filters</string>
    <string name="button_parameter_speakable_text">parameters</string>
    <string name="button_quit">Quit</string>
    <string name="select_your_store">Select your store</string>
    <string name="logo_of_store">logo of store</string>
    <string name="error_loading_store">Failed to fetch stores, please check your internet connection and try again.</string>
    <string name="filter_by_alphabetical_order">Sort by alphabetical order</string>
    <string name="next">Next</string>
    <string name="deals_parameters">Deals parameters</string>
    <string name="number_of_deals">Number of deals:</string>
    <string name="sort_by">Sort deals by</string>
    <string name="select_deals_radio_button_DealRating">DealRating</string>
    <string name="sort_direction">Sort direction:</string>
    <string name="ascending_abbreviation">asc</string>
    <string name="descending_abbreviation">desc</string>
    <string name="max_age_of_deals_in_hours">Max age of deals (in hours):</string>
    <string name="deals_prices_parameters">Deals Prices Parameters</string>
    <string name="price_range">Price range:</string>
    <string name="see_all_prices">See all prices</string>
    <string name="deal_parameter_aaa">AAA</string>
    <string name="currently_on_sale">Currently on sale</string>
    <string name="rating">Rating:</string>
    <string name="steam" translatable="false">Steam</string>
    <string name="finish">Finish</string>
    <string name="deals">Deals</string>
    <string name="promohub_disclaimer">Results powered by the CheapShark API.</string>
    <string name="game_hero">game_hero</string>
    <string name="deals_details">Details</string>
    <string name="view_deal_details">view deal details</string>
    <string name="see_deal">See deal</string>
    <string name="save_deal">Save deal</string>
    <string name="show_saved_deals">show saved deals</string>
    <string name="normal_price">Normal price:</string>
    <string name="button_search_speakable_text">search</string>
    <string name="exact">exact</string>
    <item name="select_deals_radio_button_Title" type="string">Title</item>
    <item name="select_deals_radio_button_Savings" type="string">Savings</item>
    <item name="select_deals_radio_button_Price" type="string">Price</item>
    <item name="select_deals_radio_button_Metacritic" translatable="false" type="string">
        Metacritic
    </item>
    <item name="select_deals_radio_button_Reviews" type="string">Reviews</item>
    <item name="select_deals_radio_button_Release" type="string">Release</item>
    <item name="select_deals_radio_button_Store" type="string">Store</item>
    <item name="select_deals_radio_button_Recent" type="string">Recent</item>
    <string name="cheapest">cheapest</string>
    <string name="deal_saved">Deal saved</string>
    <string name="delete_saved_deal">Remove saved deal</string>
    <string name="deal_deleted">Deal deleted</string>
    <string name="no_saved_deals">No saved deals</string>
    <string name="saved_deals">Saved deals</string>
    <string name="settings">Settings</string>
    <string name="save_parameters_as_i_change_them">Save deals parameters as I change them</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_content">PromoHub uses the CheapShark API to find and track game deals but is not affiliated with CheapShark in any way. Deal links have to go through CheapShark\'s redirect URL but this should not affect your price. As per CheapShark\'s API documentation, all prices shown are in USD.  PromoHub has no control over the prices, it simply plugs into the CheapShark API and displays the information as is.</string>
    <string name="credit">Credits</string>
    <string name="source_code">Source code</string>
    <string name="source_code_value" translatable="false">https://github.com/Didiloy/PromoHub/</string>
    <string name="you_can_activate_the_auto_saving_of_your_parameters_in_the_settings">You can activate the auto saving of your parameters in the settings!</string>
    <string name="share">Share</string>
    <string name="share_using">Share using</string>
    <string name="share_text">Take a look at this deal I found on PromoHub !</string>
    <string name="i_own_the_game">I own the game</string>
    <string name="see_owned_games">See owned games</string>
    <string name="owned_games">Owned games</string>
    <string name="no_saved_games">No saved games</string>
    <string name="hide_owned_deals">Hide owned games from results</string>
</resources>