<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".results.DealDetail">

    <ImageView
        android:id="@+id/game_image"
        android:layout_width="0dp"
        android:layout_height="270dp"
        android:contentDescription="@string/image_home_content_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/image_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="230dp"
        android:backgroundTint="?attr/colorSurface"
        android:elevation="0dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/game_grid_image"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:contentDescription="@string/image_home_content_description"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/game_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="viewStart"
        android:textColor="?attr/colorOnSurface"
        android:textSize="24sp"
        android:ellipsize="end"
        android:lines="2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_container"
        app:layout_constraintTop_toBottomOf="@+id/cardView6" />

    <TextView
        android:id="@+id/game_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textAlignment="viewStart"
        android:textColor="?attr/colorOnSurface"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/image_container"
        app:layout_constraintTop_toBottomOf="@+id/game_title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="233dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="?attr/colorTertiaryContainer"
        android:elevation="0dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/game_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textColor="?attr/colorOnTertiaryContainer"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/game_textview_old_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="?attr/colorOnSurface"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/normal_price"
        android:textColor="?attr/colorOnSurface"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/game_textview_metacritic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/select_deals_radio_button_Metacritic"
        android:textColor="?attr/colorOnSurface"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_container" />

    <RatingBar
        android:id="@+id/game_ratingbar_metacritic"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:max="5"
        android:min="0"
        android:numStars="5"
        android:progressTint="?attr/colorOnSurface"
        android:stepSize="1.0"
        app:layout_constraintStart_toEndOf="@+id/game_textview_metacritic"
        app:layout_constraintTop_toBottomOf="@+id/image_container" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textStyle="italic"
        android:text="@string/steam"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_textview_metacritic" />

    <TextView
        android:id="@+id/game_textview_steam_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/game_textview_metacritic" />

    <Button
        android:id="@+id/button_view_deal_in_browser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/see_deal"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_save_deal"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_save_deal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/save_deal"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_view_deal_in_browser" />

</androidx.constraintlayout.widget.ConstraintLayout>